bootstrap with ejs

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,29 +1,54 @@
 <html>
-    <head>
-        <title>home page</title>
-        <style>
-            .blog-container {
-                width: 50%;
-                height: 20%;
-                border: 3px solid black;
-                border-radius: 10px;
-                background-color: #ddd
-            }
-        </style>
-    </head>
-    <body style="margin: 20px 50px">
-    <h1 style="text-align: center">BLOOGER</h1>
+
+<head>
+    <title>home page</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">BLOGGER</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">PROFILE</a>
+                    </li>
+                </ul>
+            </div>
+            </divS>
+    </nav>
+    <div class="container">
     <form action="/api/users" method="post">
-        <input type="text" name="name" value=<%= name %>  placeholder="name" style="display:block; width: 90%; margin: 5px; padding: 10px" readonly>
-        <input type="text" name="title" placeholder="title" style="display:block; width: 90%; margin: 5px; padding: 10px" required>
-        <textarea name="blog" style="display:block; height: 300px; padding: 10px; width: 90%; margin: 5px"></textarea>
-        <button type="submit" style="display:block; width: 90%; padding: 20px; width: 90%; margin: 5px">SUBMIT</button>
+        <div class="form-floating">
+            <textarea class="form-control m-2 border border-black border-3" style="width: 35rem; height: 5rem" name="blog" placeholder="Leave a comment here" id="floatingTextarea2"
+                style="height: 100px"></textarea>
+            <label for="floatingTextarea2">what's on your mind?</label>
+            <button type="submit" class="btn btn-prmiary">POST</button>
+        </div>
     </form>
-    <% allBlogs.forEach(blog => { %>
-    <div class="blog-container"><h3><%= blog.title %></h3>
-     <p><%= blog.blog %></p>
-     <h5><%= blog.name %></h5>
+    <% allBlogs.forEach(blog=> { %>
+        <div class="blog-container">
+            <h3>
+                <%= blog.title %>
+            </h3>
+            <p>
+                <%= blog.blog %>
+            </p>
+            <h5>
+                <%= blog.name %>
+            </h5>
+        </div>
+        <% }) %>
     </div>
-    <% }) %>
-    </body>
+</body>
+
 </html>
