--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,16 +1,36 @@
 <html>
-    <head>
-        <title>sign UP</title>
-    </head>
-    <body>
-        <form action="/users" method="post">
-            <label>NAME</label>
-            <input type="text" name="name" placeholder="name" required>
-            <label>EMAIL</label>
-            <input type="text" name="email" placeholder="email" required>
-            <label>PASSWORD</label>  
-            <input type="password" name="password" placeholder="password" required> 
-            <button type="submit">SIGN UP</button>     
-        </form>
-    </body>
+
+<head>
+    <title>sign UP</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+</head>
+
+<body class="d-flex justify-content-center  align-items-center">
+    <div class="container-sm d-flex justify-content-center align-items-center flex-column">
+        <h2>SIGN UP </h2>
+        <div class="card text-center border border-5 border-success" style="width:35rem">
+            <div class="card-body">
+                <form action="/users" method="post">
+                    <div class="sms">
+                        <label for="exampleInputEmail1" class="form-label">Name</label>
+                        <input type="email" name="name" class="form-control" id="exampleInputEmail1"
+                            aria-describedby="emailHelp">
+                    </div>
+                    <div class="sms">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail1"
+                            aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="mb-3 ">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <button type="submit" class="btn btn-success">SIGN UP</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
