--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,7 +13,7 @@
                 <form action="/users" method="post">
                     <div class="sms">
                         <label for="exampleInputEmail1" class="form-label">Name</label>
-                        <input type="email" name="name" class="form-control" id="exampleInputEmail1"
+                        <input name="name" class="form-control" id="exampleInputEmail1"
                             aria-describedby="emailHelp">
                     </div>
                     <div class="sms">
